
- extracted ref_recon from ref_metric
- ref_metric_test --fixed-point metric from series of solb

Tue, Sep 11, 2018 : Released Refine 1.8.20

- added limits (current min/max) on ratio during operations
- sequential 2D continuously interpolates metric 

Thu, Aug 30, 2018 : Released Refine 1.8.19

- added histogram movies
- uv_area sign based on topology
- triangle windings are flipped for normal into domain
- cavity operator for edge split on boundary
- new implementation of tet smoothing via max-min optimization
- multiscale metric with L2-projection and kexact Hessian reconstruction
- edge subdiv to reduce parallel partition artifacts
- ParMETIS uses edge weights
- ref_geom .egads model can be tessellated with AFLR
- parallel localization of background grid
- global variables eliminated
- shared libraries linked with rpath
- source code google formatted via clang-format
- EGADSlite support
- meshb format caches EAGDSlite data and ref_geom CAD association
- parameter jumps in EGADS models stored explicitly
- eliminated const char * C++ warnings
- curvature based metric
- now under Apache, version 2
- ref_stitch removed
- ref_projectable removed, no longer supported
- ref_plot3d and ref_quality removed
- jacobian form of the mean ratio
- ref_geom parallel

Mon, Jun 26, 2017 : Released Refine 1.8.18

- ref_matrix repaired jacobian cost transform
- ref_smooth edge and face optimization with ref_geom
- added acceptance tests based on github.com/UGAWG
- ref_metric 3D metric interpolated (extrapolated on boundary, not parallel)
- ref_geom geometry association cached in a .gas file
- ref_geom .egads model can be tessellated with tetgen
- ref_geom can use EGADS for geometry evaluation
- refine/one fortran interface can now store hex elements without modification
- added tetgen .smesh output format
- 3D .meshb export now uses 0 to mark vertex and tetra ids. (triangles
  continue to use face/patch id)

Tue, Aug 23, 2016 : Released Refine 1.8.17
