@@ -145,6 +145,8 @@ REF_STATUS ref_export_by_extension(REF_GRID ref_grid, const char *filename) {
     RSS(ref_export_eps(ref_grid, filename), "eps export failed");
   } else if (strcmp(&filename[end_of_string - 4], ".pdf") == 0) {
     RSS(ref_export_pdf(ref_grid, filename), "pdf export failed");
+  } else if (strcmp(&filename[end_of_string - 4], ".su2") == 0) {
+    RSS(ref_export_su2(ref_grid, filename), "su2 export failed");
   } else if (strcmp(&filename[end_of_string - 10], ".lb8.ugrid") == 0) {
     RSS(ref_export_lb8_ugrid(ref_grid, filename), "lb8.ugrid export failed");
   } else if (strcmp(&filename[end_of_string - 9], ".b8.ugrid") == 0) {
@@ -994,6 +996,126 @@ REF_STATUS ref_export_fgrid(REF_GRID ref_grid, const char *filename) {
     for (node = 0; node < node_per; node++)
       fprintf(file, " %d", o2n[nodes[node]] + 1);
     fprintf(file, "\n");
+  }
+
+  ref_free(n2o);
+  ref_free(o2n);
+
+  fclose(file);
+
+  return REF_SUCCESS;
+}
+
+REF_STATUS ref_export_su2(REF_GRID ref_grid, const char *filename) {
+  FILE *file;
+  REF_NODE ref_node;
+  REF_CELL ref_cell;
+  REF_INT node;
+  REF_INT *o2n, *n2o;
+  REF_INT nnode, ntri, nqua, ntet, npyr, npri, nhex;
+  REF_INT nodes[REF_CELL_MAX_SIZE_PER];
+  REF_INT node_per, cell;
+  REF_INT group;
+  REF_INT faceid, min_faceid, max_faceid;
+
+  ref_node = ref_grid_node(ref_grid);
+
+  file = fopen(filename, "w");
+  if (NULL == (void *)file) printf("unable to open %s\n", filename);
+  RNS(file, "unable to open file");
+
+  fprintf(file, "NDIME= 3\n");
+
+  RSS(ref_node_compact(ref_node, &o2n, &n2o), "compact");
+
+  nnode = ref_node_n(ref_node);
+
+  fprintf(file, "NPOIN= %d\n", nnode);
+
+  for (node = 0; node < ref_node_n(ref_node); node++)
+    fprintf(file, " %.16e %.16e %.16e\n", ref_node_xyz(ref_node, 0, n2o[node]),
+            ref_node_xyz(ref_node, 1, n2o[node]),
+            ref_node_xyz(ref_node, 2, n2o[node]));
+
+  ntet = ref_cell_n(ref_grid_tet(ref_grid));
+  npyr = ref_cell_n(ref_grid_pyr(ref_grid));
+  npri = ref_cell_n(ref_grid_pri(ref_grid));
+  nhex = ref_cell_n(ref_grid_hex(ref_grid));
+
+  fprintf(file, "NELEM= %d\n", ntet + npyr + npri + nhex);
+
+  each_ref_grid_ref_cell(ref_grid, group, ref_cell) {
+    node_per = ref_cell_node_per(ref_cell);
+    each_ref_cell_valid_cell_with_nodes(ref_cell, cell, nodes) {
+      switch (ref_cell_node_per(ref_cell)) {
+        case 4:
+          fprintf(file, "10");
+          break;
+        case 5:
+          fprintf(file, "14");
+          break;
+        case 6:
+          fprintf(file, "13");
+          break;
+        case 8:
+          fprintf(file, "12");
+          break;
+        default:
+          RSS(REF_IMPLEMENT, "wrong nodes per cell");
+          break;
+      }
+      for (node = 0; node < node_per; node++)
+        fprintf(file, " %d", o2n[nodes[node]]);
+      fprintf(file, "\n");
+    }
+  }
+
+  RSS(ref_export_faceid_range(ref_grid, &min_faceid, &max_faceid), "range");
+  fprintf(file, "NMARK= %d\n", max_faceid - min_faceid + 1);
+
+  for (faceid = min_faceid; faceid <= max_faceid; faceid++) {
+    ref_cell = ref_grid_tri(ref_grid);
+    node_per = ref_cell_node_per(ref_cell);
+    ntri = 0;
+    each_ref_cell_valid_cell_with_nodes(ref_cell, cell, nodes) {
+      if (nodes[node_per] == faceid) {
+        ntri++;
+      }
+    }
+
+    ref_cell = ref_grid_qua(ref_grid);
+    node_per = ref_cell_node_per(ref_cell);
+    nqua = 0;
+    each_ref_cell_valid_cell_with_nodes(ref_cell, cell, nodes) {
+      if (nodes[node_per] == faceid) {
+        nqua++;
+      }
+    }
+
+    fprintf(file, "MARKER_TAG= faceid%d\n", faceid);
+    fprintf(file, "MARKER_ELEMS= %d\n", ntri + nqua);
+
+    ref_cell = ref_grid_tri(ref_grid);
+    node_per = ref_cell_node_per(ref_cell);
+    each_ref_cell_valid_cell_with_nodes(ref_cell, cell, nodes) {
+      if (nodes[node_per] == faceid) {
+        fprintf(file, "5");
+        for (node = 0; node < node_per; node++)
+          fprintf(file, " %d", o2n[nodes[node]]);
+        fprintf(file, "\n");
+      }
+    }
+
+    ref_cell = ref_grid_qua(ref_grid);
+    node_per = ref_cell_node_per(ref_cell);
+    each_ref_cell_valid_cell_with_nodes(ref_cell, cell, nodes) {
+      if (nodes[node_per] == faceid) {
+        fprintf(file, "9");
+        for (node = 0; node < node_per; node++)
+          fprintf(file, " %d", o2n[nodes[node]]);
+        fprintf(file, "\n");
+      }
+    }
   }
 
   ref_free(n2o);
