@@ -58,6 +58,7 @@ REF_STATUS ref_export_tec_ratio(REF_GRID ref_grid, const char *root_filename);
 
 REF_STATUS ref_export_smesh(REF_GRID ref_grid, const char *filename);
 REF_STATUS ref_export_fgrid(REF_GRID ref_grid, const char *filename);
+REF_STATUS ref_export_su2(REF_GRID ref_grid, const char *filename);
 REF_STATUS ref_export_ugrid(REF_GRID ref_grid, const char *filename);
 REF_STATUS ref_export_lb8_ugrid(REF_GRID ref_grid, const char *filename);
 REF_STATUS ref_export_b8_ugrid(REF_GRID ref_grid, const char *filename);
